# Discovery

./: CMakeLists.txt  main.c
startup/: linker.ld  startup.c  types.h  vector.h
startup/boards/: stm32f407.h
